[workspace]

members = [
  "filecoin-proofs",
  "storage-proofs-core",
  "storage-proofs-porep",
  "storage-proofs-post",
  "fil-proofs-tooling",
  "fil-proofs-param",
  "fr32",
  "sha2raw",
  "filecoin-hashers",
]

[patch.crates-io]
bellperson = { git = "https://github.com/filecoin-project/bellperson", branch = "back-to-ocl" }
neptune = { git = "https://github.com/filecoin-project/neptune", branch = "back-to-ocl" }
