[workspace]

members = [
  "filecoin-proofs",
  "storage-proofs-core",
  "storage-proofs-porep",
  "storage-proofs-post",
  "fil-proofs-tooling",
  "fil-proofs-param",
  "fr32",
  "sha2raw",
  "filecoin-hashers",
]

[patch.crates-io]
ec-gpu-gen = { git = "https://github.com/filecoin-project/ec-gpu", branch = "amd-initialize-fix" }
