[workspace]

members = [
  "filecoin-proofs",
  "storage-proofs-core",
  "storage-proofs-porep",
  "storage-proofs-post",
  "fil-proofs-tooling",
  "fil-proofs-param",
  "fr32",
  "sha2raw",
  "filecoin-hashers",
  "storage-proofs-update",
]

[patch.crates-io]
rust-gpu-tools = { git = "https://github.com/filecoin-project/rust-gpu-tools", branch = "openclsys" }
neptune = { git = "https://github.com/filecoin-project/neptune", branch = "rust-gpu-tools-060" }
